# Sensors-and-Control-Following-Turtlebot3

./: 2_turtlebots.launch  AprulTag.m  README.md  apriltag_demo_turtle.launch  distancebyScale.m  dual_turtlebot3.launch  package.xml  setup.py  tag52_13_00007.dae  turtlebot3_man_path.launch  turtlebot3_manualpath  turtlebot3_waffle_pi2.urdf.xacro
Distance Detect/: AprulTag.m  AprulTag.mat  DistancebyScale.mat  crop_april_tag.py  distance_by_scale.py  distancebyScale.m  left_edge.mat
launch/: turtlebot3_man_path.launch
nodes/: turtlebot3_manualpath
